# Warehouse_ERP

./: README.md  desktop.ini  main.py  pyproject.toml  warehouse.db
GUI/: ai_chat_dock.py  category_view.py  dashboard_page.py  dashboard_view.py  inventory_view.py  login_window.py  main_window.py  product_view.py  products_page.py  report_view.py  stock_page.py  supplier_view.py  theme.py
GUI/icons/: desktop.ini
Infrastructure/: category_repository.py  database.py  movement_repository.py  product_repository.py  supplier_repository.py  user_repository.py
Kernel/: ai_assistant.py  auth_service.py  category_service.py  entities.py  inventory_service.py  product.py  product_service.py  report_service.py  stock_movement.py  supplier_service.py
